Fix Overlay error on Container Maxi Fix ClipPathControl error Fix Image Maxi backend size and alignment - #570

--- a/src/blocks/image-maxi/editor.scss
+++ b/src/blocks/image-maxi/editor.scss
@@ -86,4 +86,9 @@
 			}
 		}
 	}
+
+	.maxi-block-hover-wrapper {
+		width: 100% !important;
+		margin: auto;
+	}
 }
